fix: modal_body의 flex-wrap 삭제

--- a/m/web.css
+++ b/m/web.css
@@ -214,7 +214,6 @@ strong {
 	display: flex;
 	flex-direction: column;
 	gap: 2rem;
-	flex-wrap: wrap;
 }
 
 .modal_preview {
